<resources>
    <string name="app_name">Personal Mileage Tracker</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="checkBox1">Keep Me Signed In</string>
    <string name="checkBox2">Email Me About Special Pricing</string>
    <string name="signUp_button">Create Account</string>
    <string name="already_have_account">already have an account?</string>
    <string name="login_ins">Login To Your Account</string>
    <string name="other_option">Or Continue With</string>
    <string name="forgetPassword">Forgot Your Password?</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="resetLink">Reset link sent to your email</string>
    <string name="reset_link_instruction">Enter email to get reset link.</string>
    <string name="home">Home</string>
    <string name="UpcomingEvent">Upcoming Event</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="welcome2">to Squad.win</string>

    <string name="adminLogin">Admin login</string>
    <string name="filter">Filter</string>
    <string name="age">Age</string>
    <string name="style">Style</string>
    <string name="game">Game</string>
    <string name="squad_search">Squad Search</string>
    <string name="setting">Settings</string>
    <string name="privacy_Policy">Privacy Policy</string>
    <string name="preferences">Preferences</string>
    <string name="registeredEvents">Registered Events</string>
    <string name="logOut">Log Out</string>
    <string name="account">Account</string>
    <string name="signUp">Sign Up</string>
    <string name="userName">Full name</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="permission_d">Permission deaned</string>
    <string name="permission_success">Permission granted successfully</string>
    <string name="gps_n">GPS not enable</string>
    <string name="gps_instruction">GPS is disabled. Do you want to go to settings?</string>
    <string name="cancel">Cancel</string>
    <string name="gps_success">GPS Enable successfully</string>
    <string name="gps_need">Please Enable Gps</string>
    <string name="location_update">Location updated </string>
    <string name="current_location">"Current Location"</string>
</resources>