<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Account.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/signUp"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_user"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:ems="10"

                    android:hint="@string/userName"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/light_gray" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:ems="10"

                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/light_gray" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:ems="10"

                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/light_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:paddingStart="50dp"
                    android:paddingLeft="50dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="50dp"
                    android:paddingRight="50dp"
                    android:paddingBottom="10dp"
                    android:text="@string/signUp_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textViewAlreadyHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/already_have_account"
                    android:textColor="@color/green"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>